# andromede-modeling-prototype

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  README.md  main_modeling_tests.py  mkdocs.yml  model.lp  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-doc.txt  requirements.in  requirements.txt  result.csv  result_accurate.csv  result_accurate_step1.csv  result_accurate_step1_1.csv  result_accurate_step1_2.csv  result_accurate_step1_base.csv  result_accurate_step1_peak.csv  result_accurate_step2.csv  result_accurate_step2_base.csv  result_accurate_step2_old1.csv  result_accurate_step2_old2.csv  result_accurate_step2_opti1.csv  result_accurate_step2_opti2.csv  result_accurate_step2_peak.csv  result_milp.csv  result_milp_1.csv  result_milp_2.csv  result_mps.csv  result_mps_heuristique.csv  result_mps_step1_0.csv  result_mps_step1_base.csv  result_mps_step1_fr_FR_CCGT_new.csv  result_mps_step1_peak.csv  result_mps_step2_base.csv  result_mps_step2_peak.csv  (+29 more)
.github/workflows/: ci.yml
docs/: developer-guide.md  getting-started.md  index.md  user-guide.md
docs/stylesheets/: extra.css
docs/user-guide/: building.md  converters.md  data.md  inputs.md  libraries.md  models.md  optimisation.md  optimization.md  outputs.md  reference-libraries.md  syntax.md  systems.md
grammar/: Expr.g4  README.md  generate-parser.sh
src/: run_test_case.py
tests/: conftest.py  generate_mps_files.py  heuristique_thermique.py  test_BP_ancien.py  test_BP_week.py  test_BP_year.py  test_heuristiques.py  test_python_generatre_mps.py  utils.py
(+815 files in other folders)
