[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "andromede_modelling"
version = "0.0.1"
dependencies = [
    "ortools"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[tool.black]
line-length = 88
include = '\.pyi?$'
