[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "andromede_modeling_prototype"
version = "0.0.1"
license = {text="MPL-2.0"}
dependencies = [
    "ortools"
]

[project.scripts]
andromede-simulator = "andromede.main.main:main_cli"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"